2008-08-01  Badlop  <badlop@process-one.net>

	* doc/release_notes_2.0.2.txt: Added for ejabberd 2.0.2-beta1

	* src/web/ejabberd_http.erl: Temporary solution for check of
	packet size when HTTPS (EJAB-611)(EJAB-507)(EJAB-574)

2008-07-31  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Update Process-one name to ProcessOne (EJAB-708)
	* doc/guide.html: Likewise
	* doc/api/overview.edoc: Likewise
	* src/*/*.erl: Likewise
	* src/*/*.hrl: Likewise
	* src/*/*.c: Likewise
	* src/odbc/*.sql: Likewise

2008-07-30  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Support Reasons for all
	affiliation and role changes (EJAB-306)

	* src/gen_mod.erl: When ejabberd is kindly stopped, don't forget
	modules configuration (EJAB-706)
	* src/ejabberd_app.erl: Likewise

	* src/msgs/uk.msg: Fix: each string in a single line
	* src/msgs/wa.msg: Likewise

	* src/msgs/es.msg: Fix typo
	* src/msgs/gl.msg: Likewise
	* src/msgs/pt-br.msg: Likewise

	* src/msgs/zh.msg: Fix some translations (thanks to Zhan Caibao)

2008-07-29  Badlop  <badlop@process-one.net>

	* src/msgs/ca.msg: Updated (thanks to Badlop)
	* src/msgs/cs.msg: Updated (thanks to Lukas Poliuvk)
	* src/msgs/de.msg: Updated (thanks to Nikolaus Polak)
	* src/msgs/es.msg: Updated (thanks to Badlop)
	* src/msgs/fr.msg: Updated (thanks to Christophe Romain)
	* src/msgs/it.msg: Updated (thanks to Luca Brivio)
	* src/msgs/ja.msg: Updated (thanks to Tsukasa Hamano)
	* src/msgs/no.msg: Updated (thanks to Stian B. Barmen)
	* src/msgs/pl.msg: Updated (thanks to Zbyszek Zolkiewski)
	* src/msgs/pt-br.msg: Updated (thanks to Otavio Fernandes)
	* src/msgs/ru.msg: Updated (thanks to Evgeniy Khramtsov)
	* src/msgs/tr.msg: Updated (thanks to Doruk Fisek)
	* src/msgs/uk.msg: Updated (thanks to Ruslan Rakhmanin)
	* src/msgs/wa.msg: Updated (thanks to Pablo Saratxaga)
	* src/msgs/zh.msg: Updated (thanks to Shelley Shyan)

2008-07-28  Badlop  <badlop@process-one.net>
