@@ -1,3 +1,10 @@
+2008-08-09  Badlop  <badlop@process-one.net>
+
+	* src/ejabberd_service.erl: Fix XEP-0114 compliance: define xmlns
+	in header of error response; check the connection is attempted to
+	a served component; include in response the JID of served
+	component not server (thanks to Sergei Golovan)
+
 2008-08-01  Badlop  <badlop@process-one.net>
 
 	* doc/release_notes_2.0.2.txt: Added for ejabberd 2.0.2-beta1
